feat: projects details

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,16 @@
 {
   "extends": ["next", "next/core-web-vitals", "eslint:recommended"],
   "globals": {
-    "React": "readonly"
+    "React": true,
+    "google": true,
+    "mount": true,
+    "mountWithRouter": true,
+    "shallow": true,
+    "shallowWithRouter": true,
+    "context": true,
+    "expect": true,
+    "jsdom": true,
+    "JSX": true
   },
   "rules": {
     "no-unused-vars": [1, { "args": "after-used", "argsIgnorePattern": "^_" }]
