--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.8",
+    "@civic/profile": "^0.1.5",
     "@civic/solana-gateway-react": "^0.11.1",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@lottiefiles/react-lottie-player": "^3.5.0",
+    "@next/bundle-analyzer": "^13.1.2",
     "@solana/wallet-adapter-base": "^0.9.20",
-    "@solana/wallet-adapter-react": "^0.15.28",
-    "@solana/wallet-adapter-react-ui": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.26",
+    "@solana/wallet-adapter-react-ui": "^0.9.24",
     "@solana/wallet-adapter-wallets": "^0.19.9",
     "@solana/web3.js": "^1.72.0",
     "@supabase/supabase-js": "^2.2.2",
@@ -34,9 +36,10 @@
     "framer-motion": "^6",
     "hamburger-react": "^2.5.0",
     "immer": "^9.0.17",
-    "next": "12.3.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "next": "^12.2.5",
+    "next-transpile-modules": "^10.0.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-hook-form": "^7.42.0",
     "react-icons": "^4.7.1",
     "simple-zustand-devtools": "^1.1.0",
@@ -47,17 +50,17 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/node": "17.0.23",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "cross-env": "^7.0.3",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4",
+    "eslint": "^8.22.0",
+    "eslint-config-next": "^12.2.5",
     "husky": "^7.0.4",
     "next-auth": "^4.3.1",
-    "prettier": "^2.6.2",
-    "typescript": "4.6.3"
+    "prettier": "^2.7.1",
+    "typescript": "4.7.4"
   },
   "resolutions": {
     "webpack": "^5"
