--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@solana/wallet-adapter-wallets": "^0.19.9",
     "@solana/web3.js": "^1.72.0",
     "@supabase/supabase-js": "^2.2.2",
+    "@usedispatch/forum": "^0.5.12",
     "boring-avatars": "^1.7.0",
+    "bson-objectid": "^2.0.4",
     "chakra-react-select": "^4.4.3",
     "framer-motion": "^6",
     "hamburger-react": "^2.5.0",
     "immer": "^9.0.17",
+    "nanoid": "^4.0.0",
     "next": "^12.2.5",
     "next-transpile-modules": "^10.0.0",
     "react": "^18.0.0",
@@ -44,8 +47,8 @@
     "react-hook-form": "^7.42.0",
     "react-icons": "^4.7.1",
     "simple-zustand-devtools": "^1.1.0",
-    "zustand": "^4.1.5",
-    "@usedispatch/forum": "^0.5.12"
+    "uuid": "^9.0.0",
+    "zustand": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
@@ -54,6 +57,7 @@
     "@types/node": "17.0.23",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.4",
     "babel-loader": "^8.2.4",
     "cross-env": "^7.0.3",
