--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "boring-avatars": "^1.7.0",
     "bson-objectid": "^2.0.4",
     "chakra-react-select": "^4.4.3",
+    "chakra-ui-markdown-renderer": "^4.1.0",
     "framer-motion": "^6",
     "hamburger-react": "^2.5.0",
     "immer": "^9.0.17",
@@ -46,6 +47,7 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.42.0",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.5",
     "simple-zustand-devtools": "^1.1.0",
     "uuid": "^9.0.0",
     "zustand": "^4.1.5"
